public/style.css
body {
  font-family: "Noto Serif", serif;
  font-size: 16px;
  position: relative;
  margin-top: 0px;
  margin-bottom: 7%;
  margin-right: 7%;
  margin-left: 7%;
  background-color: #ffffff;
  color: #000000;
}

h2 {
  font-family: "Noto Sans", sans-serif;
  margin-block-start: 3em;
  margin-block-end: 0.5em;
}
h3 {
  font-family: "Noto Sans", sans-serif;
  margin-block-start: 1.5em;
  margin-block-end: 0.5em;
}

hr {
  margin-block-start: 0.2em;
  border-top: 2px solid black;
  border-bottom: 1px solid white;
  border-right: 1px solid white;
  border-left: 1px solid white;
}

table {
  left: -2px;
  position: relative;
}

th {
  font-family: Noto Sans;
  text-align: left;
}

th.palabra {
  width: 30%;
}

th.part {
  width: 10%;
}

th.definitions {
  width: 60%;
}

td {
  vertical-align: top;
  break-inside:avoid;
}

a:link {
  text-decoration: none;
  color: inherit;
}

a:visited {
  text-decoration: none;
  color: inherit;
}

a:hover {
  text-decoration: none;
  color: inherit;
}

a:active {
  text-decoration: none;
  color: inherit;
}

@page {
  margin: 1in;
}

@media print {
  body {
    font-size: 12px;
    margin: 0;
  }
}

